# graphics_labs

./: .gitignore
1-hello-triangle/: CMakeLists.txt  main.cpp
1-hello-triangle/assets/shaders/: tri.frag  tri.vert
Exercise01/: CMakeLists.txt  Instructions.md
Exercise01/src/: color.cpp  color.hpp  image.cpp  image.hpp  main.cpp  rasterize.cpp  rasterize.hpp  test.cpp
Exercise01/tests/scenes/: line_test_00.txt  line_test_01.txt  line_test_02.txt  line_test_03.txt  line_test_04.txt  line_test_05.txt  mixed_test_00.txt  tri_test_00.txt  tri_test_01.txt  tri_test_02.txt  tri_test_03.txt  tri_test_04.txt  tri_test_05.txt
